@@ -1,10 +1,11 @@
 serd (0.29.2) unstable;
 
   * Support strict parsing of prefixed names
+  * Report errors for directives or abbreviations in NTriples or NQuads
   * Report errors for prematurely terminated statements
   * Fix building with MSVC
 
- -- David Robillard <d@drobilla.net>  Mon, 28 Aug 2017 12:39:47 +0200
+ -- David Robillard <d@drobilla.net>  Sat, 23 Sep 2017 13:54:10 +0200
 
 serd (0.28.0) stable;
 
